<?xml version="1.0" encoding="utf-8"?>

<!-- TODO stycznioodporne -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addingSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_grey"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
        android:id="@+id/Add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/adding_sheet_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white"
        android:fontFamily="@font/robotoblack"
        app:layout_constraintTop_toBottomOf="@+id/Add_title"
        />

    <RadioGroup
        android:id="@+id/enter_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_header" >

        <RadioButton
            android:id="@+id/cat_Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/ic_round_home_24"
            android:layout_gravity="center"
            android:padding="12dp"
            android:buttonTint="@color/white"
            android:buttonTintMode="add"/>

        <RadioButton
            android:id="@+id/cat_Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/ic_round_work_24"
            android:layout_gravity="center"
            android:padding="12dp"
            android:buttonTint="@color/white" />

        <RadioButton
            android:id="@+id/cat_School"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/ic_round_school_24"
            android:layout_gravity="center"
            android:padding="12dp"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:id="@+id/cat_Personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableStart="@drawable/ic_round_person_24"
            android:drawableTint="@color/white"
            android:layout_gravity="center"
            android:padding="12dp"
            android:buttonTint="@color/white"/>
    </RadioGroup>

    <EditText
        android:id="@+id/enter_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:hint="@string/adding_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/enter_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/enter_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:padding="14dp"
        android:hint="@string/adding_hint_description"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/enter_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/Add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="@color/teal_grey"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_description"
        app:srcCompat="@drawable/ic_baseline_add_box_24"
        android:contentDescription="Adding Button" />


    <com.google.android.material.chip.Chip
        android:id="@+id/Date_chip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_adding"
        app:chipIcon="@drawable/ic_baseline_date_range_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_description"/>

    <ImageButton
        android:id="@+id/Priority_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/teal_grey"
        android:contentDescription="Priority Button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@id/Date_chip"
        app:layout_constraintTop_toBottomOf="@+id/enter_description"
        app:srcCompat="@drawable/ic_round_flag_24"
        app:tint="@color/white" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/Priority_chip_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Date_chip"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/Priority_chip_3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_3"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/yellow" />

        <com.google.android.material.chip.Chip
            android:id="@+id/Priority_chip_2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_2"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/orange" />

        <com.google.android.material.chip.Chip
            android:id="@+id/Priority_chip_1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_1"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/red" />
    </com.google.android.material.chip.ChipGroup>


    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:theme="@style/CalenderViewCustom"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Priority_chip_group"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>